--- a/HackwichSix_TheMightyTableView_10.10.23(Tues)/Base.lproj/Main.storyboard
+++ b/HackwichSix_TheMightyTableView_10.10.23(Tues)/Base.lproj/Main.storyboard
@@ -8,7 +8,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Item 2-->
+        <!--Places to Travel-->
         <scene sceneID="vVk-Sn-FM6">
             <objects>
                 <viewController id="l0O-BV-3LR" sceneMemberID="viewController">
@@ -18,27 +18,48 @@
                         <viewLayoutGuide key="safeArea" id="rW8-wE-sI1"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item 2" id="ya8-3k-Slf"/>
+                    <tabBarItem key="tabBarItem" title="Places to Travel" image="airplane.departure" catalog="system" id="ya8-3k-Slf"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Bs5-Rd-Cod" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="619" y="280"/>
+            <point key="canvasLocation" x="619" y="338"/>
         </scene>
-        <!--Item 1-->
+        <!--My Classmates-->
         <scene sceneID="ydn-S7-Sc7">
             <objects>
-                <viewController id="QLL-7j-CGs" sceneMemberID="viewController">
+                <viewController id="QLL-7j-CGs" customClass="ViewController" customModule="HackwichSix_TheMightyTableView_10_10_23_Tues_" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="cPI-RU-HTM">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="k8g-uU-0qj">
+                                <rect key="frame" x="0.0" y="84" width="414" height="729"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="8Di-Em-BNk">
+                                        <rect key="frame" x="0.0" y="44.5" width="414" height="43.5"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="8Di-Em-BNk" id="eJw-gS-Xae">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="QLL-7j-CGs" id="K1c-zN-bgY"/>
+                                    <outlet property="delegate" destination="QLL-7j-CGs" id="k6v-Cf-rGD"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="zwZ-z9-AYk"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item 1" id="hc3-zc-auY"/>
+                    <tabBarItem key="tabBarItem" title="My Classmates" image="person.2.fill" catalog="system" id="hc3-zc-auY"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wsT-Vf-H8a" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="619" y="-326"/>
+            <point key="canvasLocation" x="618.84057971014499" y="-326.11607142857139"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="EQ5-4o-AOy">
@@ -60,6 +81,8 @@
         </scene>
     </scenes>
     <resources>
+        <image name="airplane.departure" catalog="system" width="128" height="83"/>
+        <image name="person.2.fill" catalog="system" width="128" height="80"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
