Realized that I am unable to load the simulator correctly when trying to connect the dataSource and delegates to the VC (<-- i did as demo'd/instructed in class lesson/class recording where we are to drag from the right panel (e.g dataSource) to the VC bar  (e.g the bar on top of the screen where it has 3 icons); in video, it was dragged from the right panel to the first icon of the bar) ^the simulator would load for a short bit and then the app would crash

--- a/HackwichSix_TheMightyTableView_10.10.23(Tues)/Base.lproj/Main.storyboard
+++ b/HackwichSix_TheMightyTableView_10.10.23(Tues)/Base.lproj/Main.storyboard
@@ -46,6 +46,10 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                 </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="QLL-7j-CGs" id="FCW-1Y-Gv2"/>
+                                    <outlet property="delegate" destination="QLL-7j-CGs" id="qRG-Mu-3N3"/>
+                                </connections>
                             </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="zwZ-z9-AYk"/>
